# coroutine_sim

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format.yml  googletest.yml
example/: default_config.json  default_config.txt  topology.json
include/csim/config/: config.h  config_manager.h  knob_base.h  knob_list.h  knob_list.inl  knob_system.h
include/csim/core/: module.h  payload.h  port.h  sim_types.h  system.h
include/csim/tracing/: tracer.h
include/csim/utilities/: cache.h  delay_channel.h  scheduled_event.h  work_queue.h
include/models/: home_agent.h  initiator.h  interconnect.h  target.h  topology_loader.h  transaction_inbox.h  transaction_queue.h
include/protocols/: chi.h  chi_enums.h
scripts/: jsonl_to_perfetto.py
src/: CMakeLists.txt  main.cpp
src/csim/config/: config.cpp  config_manager.cpp  knob_list.cpp  topology_loader.cpp
src/csim/core/: module.cpp  payload.cpp  system.cpp
src/csim/tracing/: tracer.cpp
src/csim/utilities/: cache.cpp  delay_channel.cpp  scheduled_event.cpp  work_queue.cpp
src/models/: home_agent.cpp  initiator.cpp  interconnect.cpp  target.cpp  topology_loader.cpp  transaction_inbox.cpp  transaction_queue.cpp
test/: CMakeLists.txt  config_test.cpp  scheduled_event_test.cpp  subcoroutine_test.cpp  topology_loader_test.cpp  tracer_test.cpp  transaction_inbox_test.cpp  transaction_queue_test.cpp  work_queue_test.cpp
